Text overflow fixes

--- a/style.css
+++ b/style.css
@@ -165,6 +165,9 @@ body.movingUI #extensionTopBar {
     flex: 1;
     opacity: 0.8;
     text-align: right;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 #extensionConnectionProfilesStatus.offline {
@@ -188,6 +191,7 @@ body.movingUI #extensionTopBar {
     background-size: 8px 5px;
     margin: 0;
     font-size: calc(var(--mainFontSize)* 0.9);
+    padding-right: 20px;
 }
 
 #extensionTopBarChatName {
